# strategic-plan

./: .buildinfo  .gitignore  README.md  dodo.py  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: strategic-plan-editorial.md
.github/workflows/: test.yml
_sources/strategic-plan/: DEVELOPER.md  README.md  references.md
_sources/strategic-plan/initiatives/: README.md
_sources/strategic-plan/oss/: README.md
mgf_strategic_plan/: README.md  config.yml  dodo.py  toc.yml
mgf_strategic_plan/strategic-plan/: README.md  about.md  community.md  references.md  summary.md
mgf_strategic_plan/strategic-plan/community/: README.md
mgf_strategic_plan/strategic-plan/events/: README.md
mgf_strategic_plan/strategic-plan/initiatives/: community.md  oss.md  textbook.md  workshops.md
mgf_strategic_plan/strategic-plan/oss/: README.md
mgf_strategic_plan/strategic-plan/services/: README.md
strategic-plan/: DEVELOPER.html  README.html  about.html  community.html  references.html  summary.html
strategic-plan/initiatives/: README.html  community.html  oss.html  textbook.html  workshops.html
strategic-plan/oss/: README.html
strategic-plan/services/: README.html
